# goit-py_web-hw-05

./: README.md  chat_index.html  chat_server.py  main.py  pyproject.toml
chat/: api_pb.py
