[project]
name = "goit-py-web-hw-05"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksii Haiduk",email = "Silvestr171@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "names (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
